language/move-prover/tests/sources/functional/opaque.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold
   ┌─ tests/sources/functional/opaque.move:14:9
   │
14 │         ensures result == 2;
   │         ^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/opaque.move:10: opaque_incorrect
   =         result = <redacted>
   =     at tests/sources/functional/opaque.move:11: opaque_incorrect
   =     at tests/sources/functional/opaque.move:14: opaque_incorrect (spec)
